添加gaea帮助说明

--- a/quickstart/3.intro_gaea.md
+++ b/quickstart/3.intro_gaea.md
@@ -1,14 +1,14 @@
 ## gaea工具简单
 gaea工具是一个为了协助快速开发hydra项目而创建的项目，通过gaea可以很容易的进行hydra项目的创建、热编译、开发、测试、和部署。
 
-### gaea工具安装
+## gaea工具安装
 可以通过以下方式安装gaea工具
 
 `go get github.com/qxnw/gaea`
 
-### gaea工具详解
+## gaea工具详解
 
-####    new 命令
+###    new 命令
 
 `new` 命令是新建一个hydra项目，包括api和web项目。在命令行下执行 `gaea new <项目名> <模式>` 就可以创建一个新的项目。该命令会在 `$GOPATH/src` 目录下生成如下目录结构的项目：
 
