添加gaea帮助说明

--- a/quickstart/3.intro_gaea.md
+++ b/quickstart/3.intro_gaea.md
@@ -1,5 +1,5 @@
 ## gaea工具简介
-gaea工具是为了协助开发人员快速创建和管理hydra项目而创建的项目，通过gaea可以很容易的进行hydra项目的创建、热编译、开发、测试、和部署。
+> gaea工具是为了协助开发人员快速创建和管理hydra项目而创建的项目，通过gaea可以很容易的进行hydra项目的创建、热编译、开发、测试、和部署。
 
 ## gaea工具安装
 可以通过以下方式安装gaea工具
