添加gaea帮助说明

--- a/quickstart/3.intro_gaea.md
+++ b/quickstart/3.intro_gaea.md
@@ -12,7 +12,7 @@
 
 > `new` 命令是新建一个hydra项目，如service，或web项目。在命令行下执行 `gaea new <项目名> <模式>` 就可以创建一个新的项目。该命令生成的源文件放在 `$GOPATH/src` 目录下
 
-1. ###### 执行以下命令,创建一个[service]项目:
+1. #### 执行以下命令,创建一个[service]项目:
 ****
 `~/work/bin$ gaea new myproject --service`
 
@@ -32,7 +32,7 @@
 
 
 
-2. ###### 执行以下命令,创建一个[web]项目:
+2. #### 执行以下命令,创建一个[web]项目:
 ****
 `~/work/bin$ gaea new myproject2 --web`
 
@@ -47,7 +47,7 @@
 项目生成成功: /home/my/work/src/myproject2
 ```
 
-3. ###### 执行以下命令,创建一个包含[有服务接口的web]项目:
+3. #### 执行以下命令,创建一个包含[有服务接口的web]项目:
 ****
 `~/work/bin$ gaea new myproject3 --mix`
 
