修改帮助内容

--- a/quickstart/3.intro_gaea.md
+++ b/quickstart/3.intro_gaea.md
@@ -99,3 +99,8 @@
 [2017/10/31 17:11:49.292791][i][c178f34d3]Listening on 0.0.0.0:8102
 [2017/10/31 17:11:51.319310][i][aad9f6cf4]启动成功:notify(rpc)(addr:192.168.5.71:8102,srvs:1)
 ```
+
+
+
+
+由于hydra启动需从注册中心拉取服务器配置，所以以上项目未在注册中心配置前是不能运行成功的，成功运行以上项目请查看[服务器配置]章节
