修改hydra说明文档

--- a/quickstart/3.intro_gaea.md
+++ b/quickstart/3.intro_gaea.md
@@ -103,4 +103,4 @@
 
 
 
-由于hydra启动需从注册中心(-r参数指定的地址)拉取服务器配置，所以以上项目未在注册中心配置前是不能运行成功的，成功运行以上项目请查看[服务器配置]章节
+注意：由于hydra启动需从注册中心(-r参数指定的地址)拉取服务器配置，所以以上项目未在注册中心配置前是不能运行成功的，成功运行以上项目请查看[服务器配置]章节
