--- a/quickstart/4.install_zk.md
+++ b/quickstart/4.install_zk.md
@@ -1,9 +1,9 @@
 ## zookeeper安装
-ZooKeeper是一个分布式的，开源的分布式应用程序协调服务。hydra使用zookeeper作为注册中心提供以下功能:
+ZooKeeper是一个开源的分布式应用程序协调服务。hydra使用zookeeper作为注册中心提供以下功能:
 
 |名称    |   说明    |
-| ------------- |:-------------:|
-|参数配置|服务器启动和运行参数如：绑定的IP端口，路由，安全，数据库地址，外部服务地址等|
+|:-------------:|:-------------:|
+|参数配置|服务器启动和运行参数如：服务器类型，绑定的IP端口，路由，安全，数据库地址，外部服务地址等|
 |服务注册与发现|RPC服务启动后自动注册节点，RPC客户端自动发现服务|
 |主备模式cron|多个cron server启动后自动注册节点，并选举最小的作为master运行cron,master死掉后重新选举节点值最小的slave执行cron|
 |管理所有服务|服务器启动后自动注册到zk,监控系统将实时监测服务器的上下线|
