修改hydra说明文档

--- a/quickstart/4.install_zk.md
+++ b/quickstart/4.install_zk.md
@@ -8,3 +8,10 @@ ZooKeeper是一个开源的分布式应用程序协调服务。hydra使用zookee
 |主备模式cron|多个cron server启动后自动注册到zk，并选举最小的作为master运行cron,master死掉后重新选举节点最小的slave执行cron|
 |管理所有服务|服务器启动后自动注册到zk,监控系统将实时监测服务器的上下线|
 |变更自动通知|服务器参数变更，服务上下线都自动通知到服务器，服务器自动更新本地配置或调整服务器|
+
+
+##### zookeeper安装过程参考以下文章
+
+[zookeeper 安装和配置教程1](http://www.cnblogs.com/shanheyongmu/p/6233819.html)
+
+[Zookeeper 安装和配置教程2](http://www.cnblogs.com/zhangjianbin/archive/2017/01/14/6285596.html)
