--- a/quickstart/4.install_zk.md
+++ b/quickstart/4.install_zk.md
@@ -10,7 +10,7 @@ ZooKeeper是一个开源的分布式应用程序协调服务。hydra使用zookee
 |变更自动通知|服务器参数变更，服务上下线都自动通知到服务器，服务器自动更新本地配置或调整服务器|
 
 
-##### zookeeper安装过程参考以下文章
+#### Zookeeper安装过程参考以下文章：
 
 [zookeeper 安装和配置教程1](http://www.cnblogs.com/shanheyongmu/p/6233819.html)
 
