--- a/quickstart/4.install_zk.md
+++ b/quickstart/4.install_zk.md
@@ -12,6 +12,6 @@ ZooKeeper是一个开源的分布式应用程序协调服务。hydra使用zookee
 
 #### Zookeeper安装过程参考以下文章：
 
-[zookeeper 安装和配置教程1](http://www.cnblogs.com/shanheyongmu/p/6233819.html)
+[Zookeeper 安装和配置教程1](http://www.cnblogs.com/shanheyongmu/p/6233819.html)
 
 [Zookeeper 安装和配置教程2](http://www.cnblogs.com/zhangjianbin/archive/2017/01/14/6285596.html)
