--- a/quickstart/4.install_zk.md
+++ b/quickstart/4.install_zk.md
@@ -18,7 +18,7 @@ ZooKeeper是一个开源的分布式应用程序协调服务。hydra使用zookee
 + [Zookeeper 安装和配置教程2](http://www.cnblogs.com/zhangjianbin/archive/2017/01/14/6285596.html)
 
 
-## Zookeeper配置参数
+## hydra参数配置
 hydra服务器启动参数，运行参数都是通过zookeeper来管理的。我们可以通过两种方式来管理hydra配置参数：
 
 1. 使用themis图形界面管理，[查看](https://github.com/qxnw/hydra/blob/master/quickstart/5.install_themis.md)
