--- a/quickstart/4.install_zk.md
+++ b/quickstart/4.install_zk.md
@@ -11,7 +11,7 @@ ZooKeeper是一个开源的分布式应用程序协调服务。hydra使用zookee
 
 
 ## Zookeeper安装
-请参考以下文章进行安装：
+请参考以下教程：
 
 + [Zookeeper 安装和配置教程1](http://www.cnblogs.com/shanheyongmu/p/6233819.html)
 
