--- a/quickstart/4.install_zk.md
+++ b/quickstart/4.install_zk.md
@@ -10,6 +10,12 @@ ZooKeeper是一个开源的分布式应用程序协调服务。hydra使用zookee
 |变更自动通知|服务器参数变更，服务上下线都自动通知到服务器，服务器自动更新本地配置或调整服务器|
 
 
+[zookeeper快速入门](http://blog.csdn.net/peak_and_valley/article/details/51847052)
+
+[golang中使用zookeeper](http://blog.csdn.net/zhaominpro/article/details/77543543)
+
+
+
 ## Zookeeper安装
 请参考以下教程：
 
