--- a/quickstart/4.install_zk.md
+++ b/quickstart/4.install_zk.md
@@ -9,7 +9,8 @@ ZooKeeper是一个开源的分布式应用程序协调服务。hydra使用zookee
 |管理所有服务|服务器启动后自动注册到zk,监控系统将实时监测服务器的上下线|
 |变更自动通知|服务器参数变更，服务上下线都自动通知到服务器，服务器自动更新本地配置或调整服务器|
 
-+ 延伸阅读：
+
+延伸阅读：
 
 [zookeeper快速入门](http://blog.csdn.net/peak_and_valley/article/details/51847052)
 
