--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -5,16 +5,19 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 
 ```
 ~/work/bin$ gaea new quickstart --service
-[2017/11/01 13:40:37.710545][i][0e631e4be]启动 gaea ...
-[2017/11/01 13:40:37.710697][i][0e631e4be]创建文件: /home/my/work/src/quickstart/libs/order/orderlib.go 389
-[2017/11/01 13:40:37.710743][i][0e631e4be]创建文件: /home/my/work/src/quickstart/libs/order/sql.go 46
-[2017/11/01 13:40:37.710802][i][0e631e4be]创建文件: /home/my/work/src/quickstart/services/order.query.go 1129
-[2017/11/01 13:40:37.710838][i][0e631e4be]创建文件: /home/my/work/src/quickstart/services/order.query_test.go 1619
-[2017/11/01 13:40:37.710886][i][0e631e4be]创建文件: /home/my/work/src/quickstart/conf/conf.go 1073
-[2017/11/01 13:40:37.710930][i][0e631e4be]创建文件: /home/my/work/src/quickstart/main.go 717
-[2017/11/01 13:40:37.710975][i][0e631e4be]创建文件: /home/my/work/src/quickstart/registry.go 515
-[2017/11/01 13:40:37.710981][i][0e631e4be]项目生成成功: /home/my/work/src/quickstart
+[2017/11/01 14:04:12.218859][i][0f78b2435]启动 gaea ...
+[2017/11/01 14:04:12.218984][i][0f78b2435]创建文件: /home/my/work/src/quickstart/main.go 717
+[2017/11/01 14:04:12.219022][i][0f78b2435]创建文件: /home/my/work/src/quickstart/registry.go 512
+[2017/11/01 14:04:12.219078][i][0f78b2435]创建文件: /home/my/work/src/quickstart/services/myservice.go 801
+[2017/11/01 14:04:12.219122][i][0f78b2435]创建文件: /home/my/work/src/quickstart/conf/conf.go 855
+[2017/11/01 14:04:12.219128][i][0f78b2435]项目生成成功: /home/my/work/src/quickstart
 ```
 
 通过以上命令我们就创建了一个hydra的service项目，通过这个项目编写的代码可运行于除web应用(没有views目录)外的所有服务器如：http接口，rpc服务，定时任务，job consumer等，项目的目录结构如下:
 
+|-- conf
+|   `-- conf.go
+|-- services
+|   `-- myservice.go
+|-- main.go
+|-- registry.go
