添加第一个项目示例

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -6,10 +6,10 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 ```
 ~/work/bin$ gaea new quickstart --service
 [2017/11/01 14:04:12.218859][i][0f78b2435]启动 gaea ...
-[2017/11/01 14:04:12.218984][i][0f78b2435]创建文件: /home/my/work/src/quickstart/main.go 717
-[2017/11/01 14:04:12.219022][i][0f78b2435]创建文件: /home/my/work/src/quickstart/registry.go 512
-[2017/11/01 14:04:12.219078][i][0f78b2435]创建文件: /home/my/work/src/quickstart/services/myservice.go 801
-[2017/11/01 14:04:12.219122][i][0f78b2435]创建文件: /home/my/work/src/quickstart/conf/conf.go 855
+[2017/11/01 14:04:12.218984][i][0f78b2435]创建文件: /home/my/work/src/quickstart/main.go
+[2017/11/01 14:04:12.219022][i][0f78b2435]创建文件: /home/my/work/src/quickstart/registry.go
+[2017/11/01 14:04:12.219078][i][0f78b2435]创建文件: /home/my/work/src/quickstart/services/myservice.go
+[2017/11/01 14:04:12.219122][i][0f78b2435]创建文件: /home/my/work/src/quickstart/conf/conf.go
 [2017/11/01 14:04:12.219128][i][0f78b2435]项目生成成功: /home/my/work/src/quickstart
 ```
 
