添加第一个项目示例

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -22,9 +22,12 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 	|-- main.go                     ---程序入口
 	|-- registry.go                 ---服务注册文件
 
-|文件路径|说明|
-|-------|-------|
+项目文件说明：
+
+
+|  文件路径  |  说明   |
+|:-------:|:-------:|
 |main.go|程序入口，通过GetWorker()向外部暴露当前动态库提供的服务GetServices()及服务的处理函数Handle(name string, mode string, service string, ctx *context.Context) (response context.Response, err error)，以及系统退出后如何清理未释放资源Close()|
 |registry.go|服务注册，所有提供的服务通过Register函数注册,并通过main.go中的GetServices()可以得到注册的列表|
-|services目录|包含每个服务的实例|
+|services|包含每个服务的实例|
 |conf/conf.go|提供基于请求的配置参数获取方式|
