添加第一个项目示例

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -1,6 +1,7 @@
 ## 创建第一个项目
 hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果还没安装请查阅[hydra 的安装](https://github.com/qxnw/hydra/blob/master/quickstart/3.install_gaea.md) 和 [gaea工具安装](https://github.com/qxnw/hydra/blob/master/quickstart/3.install_gaea.md)
 
+### 1. 创建项目
 现在一切就绪我们就可以创建项目了，打开终端输入命令:
 
 ```
@@ -31,3 +32,6 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 |registry.go|服务注册，所有提供的服务通过Register函数注册,并通过main.go中的GetServices()可以得到注册的列表|
 |services|包含每个服务的实例|
 |conf/conf.go|提供基于请求的配置参数获取方式|
+
+
+### 2. 配置服务器参数
