--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -30,8 +30,9 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 |:-------:|:-------:|
 |main.go|程序入口，通过GetWorker()向外暴露当前动态库提供的服务列表(GetServices函数)和处理函数(Handle函数)，以及系统退出后如何清理未释放资源(Close函数)|
 |registry.go|服务注册，所有提供的服务通过Register函数注册,并通过main.go中的GetServices()可以得到注册的列表|
-|services|包含每个服务的实例|
+|services|存放所有服务的实现代码|
 |conf/conf.go|提供基于请求的配置参数获取方式|
 
 
 ### 2. 配置服务器参数
+配置服务器运行参数(端口，路由规则，安全认证等)可以使用themis图形界面进行操作，也可以使用zooInspector手动编写json代码,如果还没安装请点击这里[安装themis](https://github.com/qxnw/hydra/blob/master/quickstart/5.install_themis.md) [安装zooInspector]((https://issues.apache.org/jira/secure/attachment/12436620/ZooInspector.zip) )
