添加第一个项目示例

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -35,5 +35,9 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 
 
 ### 2. 配置服务器参数
-配置服务器运行参数(端口，路由规则，安全认证等)可以使用themis图形界面进行操作，也可以使用zooInspector手动编写json代码,如果还没安装请点击这里[安装themis](https://github.com/qxnw/hydra/blob/master/quickstart/5.install_themis.md) 
+服务器参数是通过注册中心管理的，注册中心目前只支持zookeeper([安装zookeeper](https://github.com/qxnw/hydra/blob/master/quickstart/4.install_zk.md))，
+配置服务器运行参数(端口，路由规则，安全认证等)可以使用themis图形界面进行操作，也可以使用zooInspector手动编写json代码,如果还没安装,请点击这里[安装themis](https://github.com/qxnw/hydra/blob/master/quickstart/5.install_themis.md) 
 [安装zooInspector](https://issues.apache.org/jira/secure/attachment/12436620/ZooInspector.zip)
+
+
+####  使用zooInspector配置服务器参数
