添加第一个项目示例

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -39,3 +39,12 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 配置服务器运行参数(端口，路由规则，安全认证等)可以使用themis([安装themis](https://github.com/qxnw/hydra/blob/master/quickstart/5.install_themis.md))图形界面进行操作，也可以使用zooInspector([安装zooInspector](https://issues.apache.org/jira/secure/attachment/12436620/ZooInspector.zip))手动编写json配置代码
 
 ####  使用zooInspector配置服务器参数
+1. 启动`zooInspector`输入zookeeper服务器地址
+2. 创建服务器配置目录,格式： /<平台名称>/servers/<系统名称>/<服务器类型>/conf/<配置标识>
+
+|名称|说明|
+|:------:|:------:|
+|平台名称|指大的系统或平台，是一组系统的统称|
+|系统名称|某个子系统名称，如后台管理系统，前端用户系统等|
+|服务器类型|如接口服务器，rpc服务器，web应服务器，mq consumer,自动服器对应的类型分别为:api,rpc,web,mq,cron|
+|配置标识|用于控制一台或一组服务器的分组标识，可以是任意名称，通常为服务器的IP地址|
