--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -47,4 +47,21 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 |平台名称|指大的系统或平台，是一组系统的统称|
 |系统名称|某个子系统名称，如后台管理系统，前端用户系统等|
 |服务器类型|如接口服务器，rpc服务器，web应服务器，mq consumer,自动服器对应的类型分别为:api,rpc,web,mq,cron|
-|配置标识|用于控制一台或一组服务器的分组标识，可以是任意名称，通常为服务器的IP地址|
+|配置标识|用于控制一台或一组服务器的分组标识，可以是任意名称，通常为服务器的IP地址的最后一段|
+
+我们按如下结构创建一个服务器配置：
+   
+	|-- myplat
+	|   -- servers 
+	|       -- myproject
+	|          -- api
+	|             -- conf
+	|                -- 171
+	|                   --router
+
+我们需要修改节点/myplat/servers/myproject/api/conf/171的值用于保存服务器启动参数，修改myplat/servers/myproject/api/conf/171/router用于设置api请求的路由配置，我们按以下内容设置:
+|节点名称|json配置|
+|------|------|
+|.../api/conf/171|{"address":":8081","status":"start"}|
+|.../api/conf/171/router|{"routers":[{"name":"hello","service":"/myservice"}]}|
+
