--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -61,8 +61,8 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 
 我们需要修改节点/myplat/servers/myproject/api/conf/171的值用于保存服务器启动参数，修改myplat/servers/myproject/api/conf/171/router用于设置api请求的路由配置，我们按以下内容设置:
 
-|节点名称|json配置|
-|------|------|
-|.../api/conf/171|{"address":":8081","status":"start"}|
-|.../api/conf/171/router|{"routers":[{"name":"hello","service":"/myservice"}]}|
+|节点名称|说明|json配置|
+|------|------|:------|
+|.../api/conf/171|主配置|{"address":":8081","status":"start"}|
+|.../api/conf/171/router|路由配置|{"routers":[{"name":"hello","service":"/myservice"}]}|
 
