添加第一个项目示例

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -59,7 +59,7 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 	|                -- 171
 	|                   --router
 
-我们需要修改节点/myplat/servers/myproject/api/conf/171的值用于保存服务器启动参数，修改myplat/servers/myproject/api/conf/171/router用于设置api请求的路由配置，我们按以下内容设置:
+我们只需要设置/myplat/servers/myproject/api/conf/171节点和/myplat/servers/myproject/api/conf/171/router节点的值，我们按以下内容设置:
 
 |节点名称|说明|json配置|
 |------|------|:------|
