--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -61,8 +61,8 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 
 我们只需要设置/myplat/servers/myproject/api/conf/171节点和/myplat/servers/myproject/api/conf/171/router节点的值，我们按以下内容设置:
 
-|节点名称|说明|json配置|
-|------|------|:------|
-|.../api/conf/171|主配置|{"address":":8081","status":"start"}|
-|.../api/conf/171/router|路由配置|{"routers":[{"name":"hello","service":"/myservice"}]}|
+|节点名称|类型|json配置|说明|
+|------|------|:------|:-------|
+|.../api/conf/171|主配置|{"address":":8081","status":"start"}|服务器状态为启动|
+|.../api/conf/171/router|路由配置|{"routers":[{"name":"hello","service":"/myservice"}]}|`hello`为外部请求名称，`myservice`为项目中注册的名称|
 
