添加第一个项目示例

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -53,16 +53,55 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
    
 	|-- myplat
 	|   -- servers 
-	|       -- myproject
+	|       -- quickstart
 	|          -- api
 	|             -- conf
 	|                -- 171
 	|                   --router
 
-我们只需要设置/myplat/servers/myproject/api/conf/171节点和/myplat/servers/myproject/api/conf/171/router节点的值，我们按以下内容设置:
+我们只需要设置/myplat/servers/quickstart/api/conf/171节点和/myplat/servers/quickstart/api/conf/171/router节点的值，我们按以下内容设置:
 
 |节点名称|类型|json配置|说明|
 |------|------|:------|:-------|
 |.../api/conf/171|主配置|{"address":":8081","status":"start"}|服务器状态为启动|
-|.../api/conf/171/router|路由配置|{"routers":[{"name":"hello","service":"/myservice"}]}|`hello`为外部请求名称，`myservice`为项目中注册的名称|
+|.../api/conf/171/router|路由配置|{"routers":[{"name":"/hello","service":"/myservice"}]}|`hello`为外部请求名称，`myservice`为项目中注册的名称|
+
+
+### 3. 启动服务器
+通过前面两步创建项目和服务器配置，现在可以启动服务器访问我们的服务，执行如下命令:`hydra <平台名称> -r <注册中心地址> -t <配置标识>`
+```
+~/work/bin$ hydra /myplat -r "zk://192.168.106.172" -t "171"
+[2017/11/01 15:37:45.450110][i][5c0480c14]Listening on http://0.0.0.0:10160
+[2017/11/01 15:37:45.456088][i][1e50735ec]Connected to 192.168.106.172:2181
+[2017/11/01 15:37:45.458613][i][1e50735ec]Authenticated: id=170788807545718089, timeout=4000
+[2017/11/01 15:37:45.458627][i][1e50735ec]Re-submitting `0` credentials after reconnect
+[2017/11/01 15:37:46.450214][i][1e50735ec]启动 hydra server(171,zk)...
+[2017/11/01 15:37:46.464631][i][1e50735ec]加载引擎插件： ./quickstart.so
+[2017/11/01 15:37:46.466433][i][f3a9f5e3b]quickstart(api):http头配置:0
+[2017/11/01 15:37:46.467329][i][f3a9f5e3b]quickstart(api):未配置静态文件
+[2017/11/01 15:37:46.469052][w][f3a9f5e3b]quickstart(api):未配置metric
+[2017/11/01 15:37:46.469066][i][f3a9f5e3b]Listening on http://0.0.0.0:8081
+[2017/11/01 15:37:46.969244][i][1e50735ec]启动成功:quickstart(api)(addr:http://192.168.5.71:8081,srvs:1)
+
+```
+我们看到服务器quickstart(api)已启动成功，外部访问地址是http://192.168.5.71:8081,提供的服务数是1个
+
+
+### 4. 访问服务器
+  在终端输入命令访问http接口: `curl http://localhost:8081/hello?id=1`
+```
+~/work/bin$ curl http://localhost:8081/hello?id=1
+{"id":"1"}
+
+```
+返回内容为我们在$GOPATH/src/quickstart/service/myservice.go定义的内容
+再看看服务器的执行情况:
+```
+[2017/11/01 15:39:36.566977][i][7f47e7774]api.request: quickstart GET /hello?id=1 from 127.0.0.1
+[2017/11/01 15:39:36.567705][i][7f47e7774]---------------业务处理---------------
+[2017/11/01 15:39:36.567707][i][7f47e7774]返回结果
+[2017/11/01 15:39:36.567754][i][7f47e7774]api.response: quickstart GET /hello?id=1 200 782.097µs
+
+```
+其中`api.request` 和 `api.response`两行为服务器自动输出的日志，其它则由业务逻辑自己打印的日志
 
