添加第一个项目示例

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -87,7 +87,7 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 我们看到服务器quickstart(api)已启动成功，外部访问地址是http://192.168.5.71:8081,提供的服务数是1个
 
 
-### 4. 访问服务器
+### 4. 访问服务
   在终端输入命令访问http接口: `curl http://localhost:8081/hello?id=1`
 ```
 ~/work/bin$ curl http://localhost:8081/hello?id=1
