--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -1,5 +1,5 @@
 ## 创建第一个项目
-hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果还没安装请查阅[hydra 的安装](https://github.com/qxnw/hydra/blob/master/quickstart/3.install_gaea.md) 和 [gaea工具安装](https://github.com/qxnw/hydra/blob/master/quickstart/3.install_gaea.md)
+hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果还没安装请查阅[gaea工具安装](https://github.com/qxnw/hydra/blob/master/quickstart/3.install_gaea.md)
 
 ### 1. 创建项目
 现在一切就绪我们就可以创建项目了，打开终端输入命令:
