--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -70,7 +70,7 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 ### 3. 启动服务器
 通过前面两步创建项目和服务器配置，现在可以启动服务器访问我们的服务，执行如下命令:`hydra <平台名称> -r <注册中心地址> -t <配置标识>`
 ```
-~/work/bin$ hydra /myplat -r "zk://192.168.106.172" -t "171"
+~/work/bin$ hydra myplat -r "zk://192.168.106.172" -t "171"
 [2017/11/01 15:37:45.450110][i][5c0480c14]Listening on http://0.0.0.0:10160
 [2017/11/01 15:37:45.456088][i][1e50735ec]Connected to 192.168.106.172:2181
 [2017/11/01 15:37:45.458613][i][1e50735ec]Authenticated: id=170788807545718089, timeout=4000
