添加第一个项目示例

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -68,7 +68,10 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 
 
 ### 3. 启动服务器
+启动服务前请确认项目是否编译为动态库，可在$GOPATH/bin目录下使用命令`go build -buildmode=plugin quickstart`进行编译，当然如果使用gaea运行服务则无需手动执行上述指令。通过以下两种方式可启动服务器。
+#### a. 使用hydra命令启动
 通过前面两步创建项目和服务器配置，现在可以启动服务器访问我们的服务，执行如下命令:`hydra <平台名称> -r <注册中心地址> -t <配置标识>`
+
 ```
 ~/work/bin$ hydra myplat -r "zk://192.168.106.172" -t "171"
 [2017/11/01 15:37:45.450110][i][5c0480c14]Listening on http://0.0.0.0:10160
@@ -84,6 +87,34 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 [2017/11/01 15:37:46.969244][i][1e50735ec]启动成功:quickstart(api)(addr:http://192.168.5.71:8081,srvs:1)
 
 ```
+#### b. 使用`gaea run`命令启动
+```
+~/work/bin$ gaea run myplat -r "zk://192.168.106.172" -t "171" -w "quickstart"
+[2017/11/01 16:04:55.854413][i][6c86d3023]启动 gaea ...
+[2017/11/01 16:04:55.854467][i][6c86d3023]监控项目:/home/my/work/src/quickstart文件的变化...104-2-[run myplat]
+[2017/11/01 16:04:55.854758][i][d9a48f203]开始编译hydra...
+[2017/11/01 16:04:55.975286][i][d9a48f203]hydra编译成功
+[2017/11/01 16:04:55.975323][i][d9a48f203]开始编译/quickstart...
+[2017/11/01 16:04:55.975360][i][d9a48f203]结束进程:hydra  [myplat -r zk://192.168.106.172 -t 171 -d]
+[2017/11/01 16:05:01.400675][i][d9a48f203]/quickstart 编译成功
+[2017/11/01 16:05:01.400733][i][d9a48f203]-------------开始启动hydra-------------
+[2017/11/01 16:05:01.411172][i][bf38f8021]Listening on http://0.0.0.0:10160
+[2017/11/01 16:05:01.411557][i][c4616c6ec]Connected to 192.168.106.172:2181
+[2017/11/01 16:05:01.415275][i][c4616c6ec]Authenticated: id=170788807545718099, timeout=4000
+[2017/11/01 16:05:01.415292][i][c4616c6ec]Re-submitting `0` credentials after reconnect
+[2017/11/01 16:05:02.411419][i][c4616c6ec]启动 hydra server(171,zk)...
+[2017/11/01 16:05:02.431127][i][c4616c6ec]加载引擎插件： ./quickstart.so
+[2017/11/01 16:05:02.433125][i][b57103992]quickstart(api):http头配置:0
+[2017/11/01 16:05:02.433861][i][b57103992]quickstart(api):未配置静态文件
+[2017/11/01 16:05:02.435222][w][b57103992]quickstart(api):未配置metric
+[2017/11/01 16:05:02.435245][i][b57103992]Listening on http://0.0.0.0:8081
+[2017/11/01 16:05:02.935514][i][c4616c6ec]启动成功:quickstart(api)(addr:http://192.168.5.71:8081,srvs:1)
+```
+
+---------------------------
+
+
+
 我们看到服务器quickstart(api)已启动成功，外部访问地址是http://192.168.5.71:8081,提供的服务数是1个
 
 
