添加第一个项目示例

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -68,9 +68,9 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 
 
 ### 3. 启动服务器
-启动服务前请确认项目是否编译为动态库，可在$GOPATH/bin目录下使用命令`go build -buildmode=plugin quickstart`进行编译，当然如果使用gaea运行服务则无需手动执行上述指令。通过以下两种方式可启动服务器。
-#### a. 使用hydra命令启动
-通过前面两步创建项目和服务器配置，现在可以启动服务器访问我们的服务，执行如下命令:`hydra <平台名称> -r <注册中心地址> -t <配置标识>`
+可通过以下两种方式启动服务器：
+#### a. 使用hydra直接启动
+直接使用hydra启动前请确认项目是否编译为动态库，可在$GOPATH/bin目录下使用命令`go build -buildmode=plugin quickstart`进行编译，然后执行命令:`hydra <平台名称> -r <注册中心地址> -t <配置标识>`启动服务器
 
 ```
 ~/work/bin$ hydra myplat -r "zk://192.168.106.172" -t "171"
@@ -88,6 +88,8 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 
 ```
 #### b. 使用`gaea run`命令启动
+使用`gaea run`启动服务时无需关注项目是否编译为动态库，因为`gaea`启动时或检测到项目变化后会自动编译项目，执行命令:`gaea run <hydra运行参数> -w <项目路径>`启动服务器
+
 ```
 ~/work/bin$ gaea run myplat -r "zk://192.168.106.172" -t "171" -w "quickstart"
 [2017/11/01 16:04:55.854413][i][6c86d3023]启动 gaea ...
