添加第一个项目示例

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -89,6 +89,7 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 ```
 #### b. 使用`gaea run`命令启动
 使用`gaea run`启动服务时无需关注项目是否编译为动态库，因为`gaea`启动时或检测到项目变化后会自动编译项目，执行命令:`gaea run <hydra运行参数> -w <项目路径>`
+[了解更多gaea命令](https://github.com/qxnw/hydra/blob/master/quickstart/3.install_gaea.md)
 
 ```
 ~/work/bin$ gaea run myplat -r "zk://192.168.106.172" -t "171" -w "quickstart"
