添加第一个项目示例

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -122,7 +122,7 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 
 
 ### 4. 访问服务
-  在终端输入命令访问http接口: `curl http://localhost:8081/hello?id=1`
+  在终端输入命令访问服务: `curl http://localhost:8081/hello?id=1`
 ```
 ~/work/bin$ curl http://localhost:8081/hello?id=1
 {"id":"1"}
