添加第一个项目示例

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -140,4 +140,4 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 ```
 其中`api.request` 和 `api.response`两行为服务器自动输出的日志，其它则由业务逻辑自己打印的日志
 
-+ 至此我们使用`gaea`创建了一个简单的service项目，并通过`zooInspector`配置了api服务器的运行参数，并通过`hydra`运行起来，使用`curl`成功访问到了这个http服务
++ 至此我们使用`gaea`创建了一个简单的service项目，并通过`zooInspector`配置为api接口服务，并通过`hydra`运行起来，使用`curl`成功访问到了这个http服务
