添加服务器概述

--- a/quickstart/7.server.intro.md
+++ b/quickstart/7.server.intro.md
@@ -3,8 +3,8 @@
 
 |服务器类型|说明|
 |:------:|:------|
-|api|http接口服务器,支持路由，安全验证，自定义http头，静态文件配置|
-|web|web应用服务器，支持路由，安全验证，自定义http头，静态文件配置，自定义views路径|
-|rpc|rpc服务器，基于grpc实现，支持路由，安全验证，限流|
-|mq|mq consumer,只支持stomp协议的消息队列|
-|cron|定时任务，基于cron表达式的定时任务|
+|api|http接口服务器,支持路由，安全验证，自定义http头，静态文件配置等|
+|web|web应用服务器，支持路由，安全验证，自定义http头，静态文件配置，自定义views路径等|
+|rpc|rpc服务器，基于grpc实现，支持路由，安全验证，限流等|
+|mq|mq consumer,只支持stomp协议的消息队列等|
+|cron|定时任务，基于cron表达式的定时任务等|
