添加服务器概述

--- a/quickstart/7.server.intro.md
+++ b/quickstart/7.server.intro.md
@@ -1,5 +1,5 @@
 ## 服务器概述
-所有服务器采用模块化和注入式的设计理念，可根据服务器逻辑的需要选择性的装卸或扩展服务器功能：
+所有服务器采用模块化和注入式的设计理念，可根据服务器逻辑的需要选择性的卸载或扩展服务器功能：
 
 |服务器类型|说明|
 |:------:|:------|
