添加服务器概述

--- a/quickstart/7.server.intro.md
+++ b/quickstart/7.server.intro.md
@@ -9,7 +9,7 @@
 |mq|mq consumer,只支持stomp协议的消息队列|
 |cron|定时任务，基于cron表达式的定时任务|
 
-+ 服务器启动与自动重启流程:
++ 服务器启动与配置变更后自动更新流程:
 
 ![服务器](https://github.com/qxnw/hydra/blob/master/quickstart/server.png?raw=true)
 
