--- a/quickstart/7.server.intro.md
+++ b/quickstart/7.server.intro.md
@@ -13,3 +13,6 @@
 
 ![服务器](https://github.com/qxnw/hydra/blob/master/quickstart/server.png?raw=true)
 
+
++ 请求执行流程
+![服务器](https://github.com/qxnw/hydra/blob/master/quickstart/execute.png?raw=true)
