--- a/quickstart/7.server.intro.md
+++ b/quickstart/7.server.intro.md
@@ -18,4 +18,4 @@
 
 ![服务器](https://github.com/qxnw/hydra/blob/master/quickstart/execute.png?raw=true)
 
-* 注意不同的服务器context中的数据来源都不同，不同服务器对返回结果response有不同的处理，所以开发者不必关注每种服务器的参数如何转换或返回，只需按context和response约定的参数接收参数和返回结果即可
+ 注意：不同的服务器context中的数据来源都不同，不同服务器对返回结果response有不同的处理，所以开发者不必关注每种服务器的参数如何转换或返回，只需按context和response的约定接收参数和返回结果即可
