添加服务器概述

--- a/quickstart/7.server.intro.md
+++ b/quickstart/7.server.intro.md
@@ -18,4 +18,4 @@
 
 ![服务器](https://github.com/qxnw/hydra/blob/master/quickstart/execute.png?raw=true)
 
- 注意：不同的服务器context中的数据来源都不同，不同服务器对返回结果response也有不同的处理，但开发者不必关注每种服务器的参数如何转换或返回，只需按context和response的约定接收参数和返回结果即可。正是这样所有开发者不用关注自己开发的服务是运行于哪种服务器，只要输入参数符合要求任意服务器都可以运行。
+ 注意：不同的服务器context中的数据来源都不同，不同服务器对返回结果response也有不同的处理，但开发者不必关注每种服务器的参数如何转换或返回，只需按context和response的约定接收参数和返回结果即可。正是这样所以开发者不必关注自己开发的服务是运行于哪种服务器，只要输入参数符合要求任意服务器都可以运行。
