--- a/quickstart/7.server.intro.md
+++ b/quickstart/7.server.intro.md
@@ -1,5 +1,5 @@
 ## 服务器概述
-hydra自身集成了多种服务器，这既简化了部署又统一了开发模式，这正是hydra的强大之处。由于我们采用golang开发，代码并不算复杂，也没有违背简洁与易维护的特性。服务器设计借鉴了tango的设计理念，采用模块化和注入式的设计理念，可根据服务器逻辑的需要选择性的卸载或扩展服务器功能，目前hydra集成了以下5种服务器:
+hydra自身集成了多种服务器，这既简化了部署又统一了开发模式，这正是hydra的强大之处。由于我们采用golang开发，代码并不算复杂，也没有违背简洁与易维护的特性。服务器设计借鉴了tango的设计理念，采用模块化和注入式的设计，可根据服务器逻辑的需要选择性的卸载或扩展服务器功能，目前hydra集成了以下5种服务器:
 
 |服务器类型|说明|
 |:------:|:------|
