添加服务器概述

--- a/quickstart/7.server.intro.md
+++ b/quickstart/7.server.intro.md
@@ -1,5 +1,5 @@
 ## 服务器概述
-1. hydra自身集成了多种服务器，这既简化了部署又统一了开发模式，这正是hydra的强大之处。由于我们采用golang开发，代码并不算复杂，也没有违背简洁与易维护的特性。服务器设计借鉴了tango的设计理念，采用模块化和注入式的设计，可根据服务器的需要选择性加载服务器功能。
+1. hydra自身集成了多种服务器,并使用统一服务治理后台(themis)进行管理。这既简化了部署又统一了开发模式，这正是hydra的强大之处。由于我们采用golang开发，代码并不算复杂，也没有违背简洁与易维护的特性。服务器设计借鉴了tango的设计理念，采用模块化和注入式的设计，可根据服务器的需要选择性加载服务器功能。
 
 2. 由于hydra抽象出context和response,所有类型的服务器请求参数都放到context中，所有服务返回结果都放到response中，由不同的服务器自己转换输入与输出参数，所以我们开发的service服务可以运行于任何服务器而无需修改一句代码(web应用只需增加view页面即可)
 
