--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -1,2 +1,18 @@
-## http接口服务器
+## 接口服务器
+http接口服务器
+|名称|说明|
+|------|------|
+|智能路由|支持|
+|静态文件|支持|
+|TLS|支持|
+|主机头限制|支持|
+|自定义http头|支持|
+|gzip|支持|
+|deflate|支持|
+|jwt|支持|
+|xsrf|支持|
+|metric|支持|
+|json输出|支持|
+|xml输出|支持|
+
 
