--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -2,8 +2,8 @@
 http接口服务器
 
 |名称|说明|
-|------|------|
-|智能路由|支持|
+|------|-------|
+|智能路由||支持|
 |静态文件|支持|
 |TLS|支持|
 |主机头限制|支持|
@@ -12,7 +12,11 @@ http接口服务器
 |deflate|支持|
 |jwt|支持|
 |xsrf|支持|
-|metric|支持|
+|OnlyAllowAjaxRequest|支持|
+|并发数统计|支持|
+|请求执行时长|支持|
+|状态码统计|支持|
+|URL转跳|支持|
 |json输出|支持|
 |xml输出|支持|
 
