--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -19,5 +19,21 @@ http接口服务器
 |URL转跳|支持|
 |json输出|支持|
 |xml输出|支持|
+### 基本配置
+```json
+{
+    "address":":8080",
+    "status":"start",
+    "tls":{
+        "cert":"../www.baidu.com.crt",
+        "key":"../baidu2017098773.key"
+    }
+}
+```
 
+|参数名|必须|说明|
+|------|-------|------|
+|address|必须|服务器启动地址,有效的格式为`[ip]:<port>`,ip地址为空时为本机所有ip|
+|status|必须|服务器状态，可选值为: start(启动)，停止(stop)|
+|tls|可空|tls证书配置，非tls时可空|
 
