添加服务器概述

--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -28,7 +28,8 @@ http接口服务器
     "tls":{
         "cert":"../www.baidu.com.crt",
         "key":"../baidu2017098773.key"
-    }
+    },
+    "metric":"@domain/var/influxdb/metric"
 }
 ```
 
@@ -37,4 +38,5 @@ http接口服务器
 |address|必须|服务器启动地址,有效的格式为`[ip]:<port>`,ip地址为空时为本机所有ip|
 |status|必须|服务器状态，可选值为: start(启动)，停止(stop)|
 |tls|可空|tls证书配置，非tls时可空|
+|metric|可空|未配置时查找当前配置节点的子节点中是否存在名称为`metric`的配置，没有则不启动metric|
 
