--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -1,24 +1,20 @@
 ## 接口服务器
 http接口服务器
 
-|名称|说明|
-|------|-------|
-|智能路由|支持|
-|静态文件|支持|
-|TLS|支持|
-|主机头限制|支持|
-|自定义http头|支持|
-|gzip|支持|
-|deflate|支持|
-|jwt|支持|
-|xsrf|支持|
-|OnlyAllowAjaxRequest|支持|
-|并发数统计|支持|
-|请求执行时长|支持|
-|状态码统计|支持|
-|URL转跳|支持|
-|json输出|支持|
-|xml输出|支持|
+|名称|说明|名称|说明|
+|------|-------|-------|-------|
+|智能路由|支持|并发数统计|支持|
+|静态文件|支持|请求执行时长|支持|
+|TLS|支持|状态码统计|支持|
+|主机头限制|支持|URL转跳|支持|
+|自定义http头|支持|json输出|支持|
+|gzip|支持|xml输出|支持|
+|deflate|支持|OnlyAllowAjaxRequest|支持|
+|jwt|支持|xsrf|支持|
+
+
+
+
 ### 基本配置
 服务器基本配置内容如下：
 ```json
