添加服务器概述

--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -12,7 +12,18 @@
 |deflate|支持|OnlyAllowAjaxRequest|支持|
 |jwt|支持|xsrf|支持|
 
-
+#### 2. 服务配置概况
+    |-- [platName]
+	|   -- servers 
+	|       -- [systemName]
+	|          -- api
+	|             -- conf
+	|                -- [tagName]
+	|                     --router
+    |                     --metric
+    |                     --static
+    |                     --auth
+    |                     --header
 
 
 ### 基本配置
