添加服务器概述

--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -15,16 +15,22 @@
 #### 2. 服务配置概况
     |-- [platName]
 	|   -- servers 
-	|       -- [systemName]
-	|          -- api
-	|             -- conf
-	|                -- [tagName]
+	|       --[systemName]
+	|          --api
+	|             --conf
+	|                --[tagName]
 	|                     --router
     |                     --metric
     |                     --static
     |                     --auth
     |                     --header
-
+    |   --var
+    |       --db
+    |          --oracle
+    |       --influxdb
+    |          --oracle
+    |       --conf
+    |          --[systemName]
 
 ### 基本配置
 服务器基本配置内容如下：
