添加服务器概述

--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -31,6 +31,19 @@
     |          --oracle
     |       --conf
     |          --[systemName]
++ 服务配置路径为：/[platName]/[servers]/[systemName]/api/conf
++ 公共参数路径为：/[platName]/var
+
+|名称|必须|说明|
+|------|------|------|
+|[tagName]|必须|服务器主配置信息，包含服务器启动的必须参数|
+|router|必须|路由配置信息|
+|metric|可空|influxdb配置信息，用于存放服务器实时请求数据(QPS,执行时长，异常次数等)|
+|static|可空|静态文件配置，如路径，扩展名等|
+|auth|可空|安全认证包括:jwt,xsrf,api basic,auth2等|
+|header|可空|所有请求都要返回的公共头信息|
+
+
 
 ### 基本配置
 服务器基本配置内容如下：
