--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -40,7 +40,7 @@
 |router|必须|路由配置信息|
 |metric|可空|influxdb配置信息，用于存放服务器实时请求数据(QPS,执行时长，异常次数等)|
 |static|可空|静态文件配置，如路径，扩展名等|
-|auth|可空|安全认证包括:jwt,xsrf,api basic,auth2等|
+|auth|可空|安全认证信息，包括:jwt,xsrf,api basic,auth2等|
 |header|可空|所有请求都要返回的公共头信息|
 
 
