添加服务器概述

--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -45,8 +45,8 @@
 
 
 
-### 基本配置
-服务器基本配置内容如下：
+### 服务器主配置
+服务器主配置信息，包含服务器启动的必须参数，配置路径为:`/[platName]/[servers]/[systemName]/api/conf/[tagName]`
 ```json
 {
     "address":":8080",
