--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -1,5 +1,5 @@
 ## 接口服务器
-#### 1. http接口服务器支持以下功能
+#### http接口服务器支持以下功能
 
 |名称|说明|名称|说明|
 |------|-------|-------|-------|
@@ -12,7 +12,8 @@
 |deflate|支持|OnlyAllowAjaxRequest|支持|
 |jwt|支持|xsrf|支持|
 
-#### 2. 服务配置概况
+## 服务器参数配置
+#### 1. 服务配置概况
     |-- [platName]
 	|   -- servers 
 	|       --[systemName]
@@ -45,7 +46,7 @@
 
 
 
-### 服务器主配置
+#### 2. 服务器主配置
 服务器主配置信息，包含服务器启动的必须参数，配置路径为:`/[platName]/[servers]/[systemName]/api/conf/[tagName]`
 ```json
 {
