--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -1,5 +1,5 @@
 ## 接口服务器
-#### http接口服务器支持以下功能
+### http接口服务器支持以下功能
 
 |名称|说明|名称|说明|
 |------|-------|-------|-------|
@@ -12,7 +12,7 @@
 |deflate|支持|OnlyAllowAjaxRequest|支持|
 |jwt|支持|xsrf|支持|
 
-## 服务器参数配置
+### 服务器参数配置
 #### 1. 服务配置概况
     |-- [platName]
 	|   -- servers 
