--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -65,7 +65,7 @@
 |------|-------|------|
 |address|必须|服务器启动地址,有效的格式为`[ip]:<port>`,ip地址为空时为本机所有ip|
 |status|必须|服务器状态，可选值为: start(启动)，停止(stop)|
-|engines|可空|使用了内置引擎时必须填写，内置引擎有:`alarm`,`monitor`,`file`等|
+|engines|可空|引擎配置参数，使用了内置引擎时必须填写，多个擎使用逗号分隔。内置的引擎有:`alarm`,`monitor`,`file`等|
 |tls|可空|tls证书配置，非tls时可空|
 |metric|可空|未配置时查找当前配置节点的子节点中是否存在名称为`metric`的配置，没有则不启动metric|
 
