--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -64,8 +64,24 @@
 |参数名|必须|说明|
 |:------|:-------:|:------|
 |address|必须|服务器启动地址,有效的格式为`[ip]:<port>`,ip地址为空时为本机所有ip|
-|status|必须|服务器状态，可选值为: start(启动)，停止(stop)|
-|engines|可空|引擎配置参数，使用了内置引擎时必须填写，多个擎使用逗号分隔。内置的引擎有:`alarm`,`monitor`,`file`等|
-|tls|可空|tls证书配置，非tls时可空|
+|status|必须|服务器状态，可选值为: start(启动)，停止(stop)，为start时会尝试启动服务器|
+|engines|可空|引擎配置参数，使用了内置引擎时必须填写，多个擎使用逗号分隔。内置的引擎有:`alarm`,`monitor`,`file`等,未配置则不能使用内置引擎|
+|tls|可空|tls证书配置，未配置则不启动tls|
 |metric|可空|未配置时查找当前配置节点的子节点中是否存在名称为 `metric` 的配置，没有则不启动metric|
 
+#### 3. 路由配置
+配置服务器请求URL的规则与内部服务的映射关系，和请求执行期间的参数：
+```json
+{
+    "routers":[
+        {
+            "name":"/order/:a",
+            "engine":"go",
+            "action":"get,post",
+            "service":"/order/@a",
+            "args":"setting=s1"
+        }
+    ],
+    "args":"db=oracle"
+}
+``` 
