添加服务器概述

--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -70,7 +70,7 @@
 |metric|可空|未配置时查找当前配置节点的子节点中是否存在名称为 `metric` 的配置，没有则不启动metric|
 
 #### 3. 路由配置
-配置服务器请求URL的规则与内部服务的映射关系，和请求执行期间的参数：
+配置服务器请求URL的规则与内部服务的映射关系，和请求执行期间的参数。未配置路由规则服务器无法对外提供任何服务：
 ```json
 {
     "routers":[
