--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -85,3 +85,12 @@
     "args":"db=oracle"
 }
 ``` 
+
+|参数名|必须|说明|
+|:------|:-------:|:------|
+|routers|必须|路由列表|
+|args|可选|所有路由共用的配置参数|
+|routers.name|必须|外部服务请求规则，支持以冒号开头的通用配符，也支持正则表达式|
+|routers.service|必须|当前资源映射的内部服务名称，支持变量翻译|
+|routers.engine|可选|未指定时为`*`,支持所有引擎，可选的引擎名称有`go`,`alarm`等|
+|routers.action|可选|http请求方式，如:`GET`,`POST`,`HEAD`,`DELETE`,`PUT`,	`OPTIONS`,`TRACE`,`PATCH` 未指定时默认为`GET`,多个用逗号分隔|
