--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -34,6 +34,10 @@
     |          --[systemName]
 + 服务配置路径为：/[platName]/[servers]/[systemName]/api/conf
 + 公共参数路径为：/[platName]/var
+[platName]： 平台名称或大系统名称
+[systemName]: 子系统名称
+
+
 
 |名称|必须|说明|
 |------|------|------|
