添加服务器概述

--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -102,3 +102,43 @@
 |.routers.engine|可选|未指定时为`*`,支持所有引擎，可选的引擎名称有`go`,`alarm`等|
 |.routers.action|可选|允许的http请求方式，如:`GET`,`POST`,`HEAD`,`DELETE`,`PUT`,	`OPTIONS`,`TRACE`,`PATCH` 未指定时为`GET`。多种请求方式用逗号分隔|
 |.routers.args|可选|当前路由规则对应的服务配置参数，系统会自动与`.args`合并，以当前的配置覆盖全局配置|
+
+#####  hydra支持4种路由配置
+
+ + 静态路由
+
+`/`
+
+`/static` 
+以固定名称作为路径全称进行匹配
+
++ 命名路由
+`/:name`
+
+`/(:name)`
+
+`/:name1/:name2`
+
+`/:name1-:name2`
+
+`/(:name1)sss(:name2)`
+
++ 通配路由
+
+`/*name`
+
+`/ttt/*name`
+
+`/sss(*name)`
+
+路由参数支持*通配符
+
++ 正则路由
++ 
+`/(:name.*)`
+
+`/(:name[0-9]+)`
+
+`/(:name1)-(:name2[0-9]+)`
+
+路由参数支持正则约束，不符合条件的参数会抛出404错误
