修改http编码方式

--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -144,3 +144,22 @@
 `/(:name1)-(:name2[0-9]+)`
 
 路由参数支持正则约束，不符合条件的参数会抛出404错误
+
+
+##### + 路由优先级
+
++ 静态路由和其它形式的路由都匹配时，静态路由优先，跟添加的顺序无关，如：
+
+`/abc`
+
+`/(:name)`
+
+那么对于请求/abc，则/abc会匹配
+
++ 多个动态路由均匹配时，先出现静态部分的路由优先，如：
+`/(:name1)/(:name1)abc`
+`/(:name1)/abc(:name1)abc(:name2)abc`
+
+那么对于请求/abc/abc123abc123abc，则/(:name1)/abc(:name1)abc(:name2)abc会匹配
+
++ 其它路由之间根据添加的顺序，先添加的优先。
