修改http编码方式

--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -12,8 +12,8 @@
 |deflate|支持|OnlyAllowAjaxRequest|支持|
 |jwt|支持|xsrf|支持|
 
-### 服务器参数配置
-#### 1. 服务配置概况
+## 服务器参数配置
+### 1. 服务配置概况
     |-- [platName]
 	|   -- servers 
 	|       --[systemName]
@@ -53,7 +53,7 @@
 
 
 
-#### 2. 服务器主配置
+### 2. 服务器主配置
 服务器主配置信息，包含服务器启动的必须参数，配置路径为:`/[platName]/[servers]/[systemName]/api/conf/[tagName]`
 ```json
 {
@@ -76,7 +76,7 @@
 |tls|可空|tls证书配置，未配置则不启动tls|
 |metric|可空|未配置时查找当前配置节点的子节点中是否存在名称为 `metric` 的配置，没有则不启动metric|
 
-#### 3. 路由配置
+### 3. 路由配置
 配置服务器请求URL的规则与内部服务的映射关系，和请求执行期间的参数。未配置路由规则服务器就无法对外提供任何服务：
 ```json
 {
@@ -103,7 +103,7 @@
 |.routers.action|可选|允许的http请求方式，如:`GET`,`POST`,`HEAD`,`DELETE`,`PUT`,	`OPTIONS`,`TRACE`,`PATCH` 未指定时为`GET`。多种请求方式用逗号分隔|
 |.routers.args|可选|当前路由规则对应的服务配置参数，系统会自动与`.args`合并，以当前的配置覆盖全局配置|
 
-#####  hydra支持4种路由配置
+###  4. hydra支持4种路由配置
 
  + 静态路由
 
@@ -146,7 +146,7 @@
 路由参数支持正则约束，不符合条件的参数会抛出404错误
 
 
-#### 路由优先级
+### 5. 路由优先级
 
 + 静态路由和其它形式的路由都匹配时，静态路由优先，跟添加的顺序无关，如：
 
