--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -4,8 +4,8 @@
 |名称|说明|名称|说明|
 |------|-------|-------|-------|
 |智能路由|支持|并发数统计|支持|
-|静态文件|支持|执行时长统计|支持|
-|TLS|支持|状态码统计|支持|
+|静态文件|支持|请求时长统计|支持|
+|TLS|支持|请求结果统计|支持|
 |主机头配置|支持|URL转跳|支持|
 |自定义http头|支持|json输出|支持|
 |gzip压缩|支持|xml输出|支持|
