--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -33,7 +33,7 @@
     |       --conf
     |          --[systemName]
 
-`[platName]`： 平台名称或大系统名称，`[systemName]`: 子系统名称
+`[platName]`： 平台名称或系统名称，`[systemName]`: 子系统名称
 
 
 + 服务配置路径为：/[platName]/[servers]/[systemName]/api/conf
