--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -16,7 +16,7 @@
 ### 1. 服务配置概况
     |-- [platName]
 	|   -- servers 
-	|       --[systemName]
+	|       --[subsystemName]
 	|          --api
 	|             --conf
 	|                --[tagName]
@@ -33,10 +33,10 @@
     |       --conf
     |          --[systemName]
 
-`[platName]`： 平台名称或系统名称，`[systemName]`: 子系统名称
+`[platName]`： 平台名称或系统名称，`[subsystemName]`: 子系统名称
 
 
-+ 服务配置路径为：/[platName]/[servers]/[systemName]/api/conf
++ 服务配置路径为：/[platName]/[servers]/[subsystemName]/api/conf
 + 公共参数路径为：/[platName]/var
 
 
@@ -54,7 +54,7 @@
 
 
 ### 2. 服务器主配置
-服务器主配置信息，包含服务器启动的必须参数，配置路径为:`/[platName]/[servers]/[systemName]/api/conf/[tagName]`
+服务器主配置信息，包含服务器启动的必须参数，配置路径为:`/[platName]/[servers]/[subsystemName]/api/conf/[tagName]`
 ```json
 {
     "address":":8080",
