--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -31,7 +31,7 @@
     |       --influxdb
     |          --oracle
     |       --conf
-    |          --[systemName]
+    |          --[subsystemName]
 
 `[platName]`： 平台名称或系统名称，`[subsystemName]`: 子系统名称
 
