--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -36,8 +36,8 @@
 `[platName]`： 平台名称或系统名称，`[subsystemName]`: 子系统名称
 
 
-+ 服务器配置路径为：/[platName]/[servers]/[subsystemName]/api/conf
-+ 公共参数路径为：/[platName]/var
++ 服务器配置路径：/[platName]/[servers]/[subsystemName]/api/conf
++ 公共参数路径：/[platName]/var
 
 
 
