--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -54,7 +54,7 @@
 
 
 ### 2. 服务器主配置
-服务器主配置信息，包含服务器启动的必须参数，配置路径为:`/[platName]/[servers]/[subsystemName]/api/conf/[tagName]`
+服务器主配置信息，包含服务器启动的必须参数，路径:`/[platName]/[servers]/[subsystemName]/api/conf/[tagName]`
 ```json
 {
     "address":":8080",
