--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -103,7 +103,7 @@
 |.routers.action|可选|允许的http请求方式，如:`GET`,`POST`,`HEAD`,`DELETE`,`PUT`,	`OPTIONS`,`TRACE`,`PATCH` 未指定时为`GET`。多种请求方式用逗号分隔|
 |.routers.args|可选|当前路由规则对应的服务配置参数，系统会自动与`.args`合并，以当前的配置覆盖全局配置|
 
-###  4. hydra支持4种路由配置
+####  1. hydra支持4种路由配置
 
  + 静态路由
 
@@ -146,7 +146,7 @@
 路由参数支持正则约束，不符合条件的参数会抛出404错误
 
 
-### 5. 路由优先级
+#### 2. 路由优先级
 
 + 静态路由和其它形式的路由都匹配时，静态路由优先，跟添加的顺序无关，如：
 
