--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -167,3 +167,15 @@
 + 其它路由之间根据添加的顺序，先添加的优先。
 
 ### 3. 静态文件
+
+配置内容:
+
+```json
+{
+    "prefix":"/static",
+    "dir":"../static/images",
+    "showDir":false,
+    "exts":".jpg;.gif",
+    "enbale":true
+}
+```
