--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -175,7 +175,16 @@
     "prefix":"/static",
     "dir":"../static/images",
     "showDir":false,
-    "exts":".jpg;.gif",
+    "exts":".jpg;.gif;.png",
     "enbale":true
 }
 ```
+
+
+|参数名|必须|说明|
+|:------|:-------:|:------|
+|prefix|可空|请求路径前的前缀,如:/static/logo.png,则匹配dir目录下的logo.png文件|
+|dir|必须|静态文件存放路径|
+|showDir|可空|是否显示目录结构, 默认为:false|
+|exts|必须|静态文件的扩展名|
+|enable|可空|true:启用静态文件配置, false:禁用静态文件配置|
