--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -183,7 +183,7 @@
 
 |参数名|必须|说明|
 |:------|:-------:|:------|
-|prefix|可空|请求路径前的前缀,如:/static/logo.png,则匹配dir目录下的logo.png文件|
+|prefix|可空|请求路径的前缀名,如:/static/logo.png,则匹配dir目录下的logo.png文件|
 |dir|必须|静态文件存放路径|
 |showDir|可空|是否显示目录结构, 默认为:false|
 |exts|必须|静态文件的扩展名|
