--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -173,7 +173,7 @@
 ```json
 {
     "prefix":"/static",
-    "dir":"../static/images",
+    "dir":"../images",
     "showDir":false,
     "exts":".jpg;.gif;.png",
     "enbale":true
