--- a/quickstart/alarm/1.alarm.md
+++ b/quickstart/alarm/1.alarm.md
@@ -5,14 +5,14 @@ hydra内置引擎支持以下监控与报警
 |服务器|类别|监控|报警|
 |----|----|----|----|
 |nginx|连接数|√|√|
-|nginx|错误|√|√|
+|nginx|错误数|√|√|
 |nginx|QPS|√|√|
 |http|状态|√|√|
 |tcp|状态|√|√|
 |hydra|QPS|√|√|
 |hydra|响应码|√|√|
 |hydra|执行时长|√|X|
-|hydra|服务个数|X|√|
+|hydra|服务个数|√|√|
 |所有|CPU|√|√|
 |所有|内存|√|√|
 |所有|硬盘|√|√|
