--- a/quickstart/alarm/1.alarm.md
+++ b/quickstart/alarm/1.alarm.md
@@ -10,7 +10,7 @@ hydra内置引擎支持以下监控与报警
 |http|状态|√|√|
 |tcp|状态|√|√|
 |hydra|QPS|√|√|
-|hydra|响应码|√|√|
+|hydra|异常响应|√|√|
 |hydra|执行时长|√|X|
 |hydra|服务个数|√|√|
 |DB|业务状态|√|√|
