--- a/quickstart/alarm/1.alarm.md
+++ b/quickstart/alarm/1.alarm.md
@@ -2,18 +2,18 @@
 
 hydra内置引擎支持以下监控与报警
 
-|服务器|类别|监控|微信报警|短信报警|
-|----|----|----|----|----|
-|nginx|连接数|√|√|√|
-|nginx|错误数|√|√|√|
-|nginx|QPS|√|√|√|
-|http|状态|√|√|√|
-|tcp|状态|√|√|√|
-|hydra|QPS|√|√|√|
-|hydra|异常响应|√|√|√|
-|hydra|执行时长|√|X|√|
-|hydra|服务个数|√|√|√|
-|DB|业务状态|√|√|√|
-|所有|CPU|√|√|√|
-|所有|内存|√|√|√|
-|所有|硬盘|√|√|√|
+|服务器|类别|监控|报警|
+|----|----|----|----|
+|nginx|连接数|√|微信√ 短信√|
+|nginx|错误数|√|√微信√ 短信√|
+|nginx|QPS|√|微信√ 短信√|
+|http|状态|√|微信√ 短信√|
+|tcp|状态|√|微信√ 短信√|
+|hydra|QPS|√|微信√ 短信√|
+|hydra|异常响应|√|微信√ 短信√|
+|hydra|执行时长|√|X|
+|hydra|服务个数|√|微信√ 短信√|
+|DB|业务状态|√|微信√ 短信√|
+|所有|CPU|√|微信√ 短信√|
+|所有|内存|√|微信√ 短信√|
+|所有|硬盘|√|微信√ 短信√|
