--- a/quickstart/alarm/1.alarm.md
+++ b/quickstart/alarm/1.alarm.md
@@ -5,7 +5,7 @@ hydra内置引擎支持以下监控与报警
 |服务器|类别|监控|报警|
 |----|----|----|----|
 |nginx|连接数|√|微信√ 短信√|
-|nginx|错误数|√|√微信√ 短信√|
+|nginx|错误数|√|微信√ 短信√|
 |nginx|QPS|√|微信√ 短信√|
 |http|状态|√|微信√ 短信√|
 |tcp|状态|√|微信√ 短信√|
