--- a/quickstart/alarm/1.alarm.md
+++ b/quickstart/alarm/1.alarm.md
@@ -4,7 +4,6 @@ hydra内置引擎支持以下监控与报警
 
 |服务器|类别|监控|报警|
 |----|----|----|----|
-|nginx|连接数|√|微信√ 短信√|
 |nginx|错误数|√|微信√ 短信√|
 |nginx|QPS|√|微信√ 短信√|
 |http|状态|√|微信√ 短信√|
@@ -17,3 +16,4 @@ hydra内置引擎支持以下监控与报警
 |所有|CPU|√|微信√ 短信√|
 |所有|内存|√|微信√ 短信√|
 |所有|硬盘|√|微信√ 短信√|
+|所有|网络连接数|√|微信√ 短信√|
