添加监控帮助

--- a/quickstart/alarm/1.alarm.md
+++ b/quickstart/alarm/1.alarm.md
@@ -19,6 +19,20 @@ hydra内置引擎支持以下监控与报警
 |所有|网络连接数|√|√|微信√ 短信√|
 |所有|网络吞吐量|√|√|微信√ 短信√|
 
-### 1. 监控服务
-
+### 1.采集服务
+根据采集服务配置，间隔一定时间采集所需数据并保存到infxluxdb中。通过grafana配置为动态图表，可实时查看采集数据的动态图。
+采集服务：
+|名称|服务名|
+|----|-----|
+|CPU使用率|/monitor/collect/cpu/used|
+|内存使用率|/monitor/collect/mem/used|
+|硬盘使用率|/monitor/collect/disk/used|
+|网络连接数|/monitor/collect/net/conn|
+|网络收发数|/monitor/collect/net/status|
+|HTTP状态|/monitor/collect/http/status|
+|TCP状态|/monitor/collect/http/status|
+|注册服务个数|/monitor/collect/registry/count|
+|数据库服务状态|/monitor/collect/sql/query|
+|nginx错误数|/monitor/nginx/error/count|
+|nginx每秒请求数|/monitor/nginx/qps/count|
 
