添加监控帮助

--- a/quickstart/alarm/1.alarm.md
+++ b/quickstart/alarm/1.alarm.md
@@ -20,19 +20,20 @@ hydra内置引擎支持以下监控与报警
 |所有|网络吞吐量|√|√|微信√ 短信√|
 
 ### 1.采集服务
-根据采集服务配置，间隔一定时间采集所需数据并保存到infxluxdb中。通过grafana配置为动态图表，可实时查看采集数据的动态图。
-采集服务：
-|名称|服务名|
-|----|-----|
-|CPU使用率|/monitor/collect/cpu/used|
-|内存使用率|/monitor/collect/mem/used|
-|硬盘使用率|/monitor/collect/disk/used|
-|网络连接数|/monitor/collect/net/conn|
-|网络收发数|/monitor/collect/net/status|
-|HTTP状态|/monitor/collect/http/status|
-|TCP状态|/monitor/collect/http/status|
-|注册服务个数|/monitor/collect/registry/count|
-|数据库服务状态|/monitor/collect/sql/query|
-|nginx错误数|/monitor/nginx/error/count|
-|nginx每秒请求数|/monitor/nginx/qps/count|
+根据采集服务配置，间隔一定时间采集所需数据并保存到infxluxdb中。通过grafana配置为动态图表，可实时查看采集数据的动态图。采集服务已内置到hydra中,提供的采集服务如下：
+|名称|服务名|args参数
+|----|-----|----|
+|CPU使用率|/monitor/collect/cpu/used|influxdb:数据库配置|
+|内存使用率|/monitor/collect/mem/used|influxdb:数据库配置|
+|硬盘使用率|/monitor/collect/disk/used|influxdb:数据库配置|
+|网络连接数|/monitor/collect/net/conn|influxdb:数据库配置|
+|网络收发数|/monitor/collect/net/status|influxdb:数据库配置|
+|HTTP状态|/monitor/collect/http/status|url:http请求地址,influxdb:数据库配置|
+|TCP状态|/monitor/collect/tcp/status|host:tcp服务器地址,influxdb:数据库配置|
+|注册服务个数|/monitor/collect/registry/count|path:注册中心地址,influxdb:数据库配置|
+|数据库服务状态|/monitor/collect/sql/query|sql:数据库查询语句,返回一个数字；db:数据库连接串,influxdb:数据库配置|
+|nginx错误数|/monitor/nginx/error/count|influxdb:数据库配置|
+|nginx每秒请求数|/monitor/nginx/qps/count|influxdb:数据库配置|
+
+ 引擎名称: `monitor` 将以上服务配置为cron服务， hydra将根据指定的时间间隔采集数据，并存储到influxdb中
 
