添加管道命令执行

--- a/quickstart/alarm/1.alarm.md
+++ b/quickstart/alarm/1.alarm.md
@@ -21,7 +21,8 @@ hydra内置引擎支持以下监控与报警
 
 ### 1.采集服务
 根据采集服务配置，间隔一定时间采集所需数据并保存到infxluxdb中。通过grafana配置为动态图表，可实时查看采集数据的动态图。采集服务已内置到hydra中,提供的采集服务如下：
-|名称|服务名|args参数
+
+|名称|服务名|args参数
 |----|-----|----|
 |CPU使用率|/monitor/collect/cpu/used|influxdb:数据库配置|
 |内存使用率|/monitor/collect/mem/used|influxdb:数据库配置|
