添加管道命令执行

--- a/quickstart/alarm/1.alarm.md
+++ b/quickstart/alarm/1.alarm.md
@@ -29,7 +29,7 @@ hydra内置引擎支持以下监控与报警
 |硬盘使用率|/monitor/collect/disk/used|influxdb:数据库配置|
 |网络连接数|/monitor/collect/net/conn|influxdb:数据库配置|
 |网络收发数|/monitor/collect/net/status|influxdb:数据库配置|
-|HTTP状态|/monitor/collect/http/status|url:http请求地址,influxdb:数据库配置|
+|HTTP状态|/monitor/collect/http/status|url:http请求地址,influxdb:数据库配置|
 |TCP状态|/monitor/collect/tcp/status|host:tcp服务器地址,influxdb:数据库配置|
 |注册服务个数|/monitor/collect/registry/count|path:注册中心地址,influxdb:数据库配置|
 |数据库服务状态|/monitor/collect/sql/query|sql:数据库查询语句,返回一个数字；db:数据库连接串,influxdb:数据库配置|
