添加管道命令执行

--- a/quickstart/alarm/1.alarm.md
+++ b/quickstart/alarm/1.alarm.md
@@ -20,7 +20,7 @@ hydra内置引擎支持以下监控与报警
 |所有|网络吞吐量|√|√|微信√ 短信√|
 
 ### 1.采集服务
-根据采集服务配置，间隔一定时间采集所需数据并保存到infxluxdb中。通过grafana配置为动态图表，可实时查看采集数据的动态图。采集服务已内置到hydra中,提供的采集服务如下：
+根据采集服务配置，间隔一定时间采集数据并保存到infxluxdb中。通过grafana配置为动态图表，可实时查看采集数据的动态图。采集服务已内置到hydra中,提供的采集服务如下：
 
 |名称|服务名|args参数
 |----|-----|----|
@@ -36,5 +36,7 @@ hydra内置引擎支持以下监控与报警
 |nginx错误数|/monitor/nginx/error/count|influxdb:数据库配置|
 |nginx每秒请求数|/monitor/nginx/qps/count|influxdb:数据库配置|
 
- 引擎名称: `monitor` 将以上服务配置为cron服务， hydra将根据指定的时间间隔采集数据，并存储到influxdb中
+ 引擎名称: `monitor` 
+ 
+ 将以上服务配置为cron服务， hydra将根据指定的时间间隔采集数据，并存储到influxdb中
 
