添加管道命令执行

--- a/quickstart/alarm/1.alarm.md
+++ b/quickstart/alarm/1.alarm.md
@@ -38,5 +38,5 @@ hydra内置引擎支持以下监控与报警
 
  引擎名称: `monitor` 
  
- 将以上服务配置为cron服务， hydra将根据指定的时间间隔采集数据，并存储到influxdb中
+ 将以上服务配置为cron服务， hydra将定时采集数据，并存储到influxdb中
 
