--- a/quickstart/alarm/1.alarm.md
+++ b/quickstart/alarm/1.alarm.md
@@ -40,3 +40,37 @@ hydra内置引擎支持以下监控与报警
  
  将以上服务配置为cron服务， hydra将定时采集数据，并存储到influxdb中
 
+
+### 1.报警服务
+根据采集服务配置，间隔一定时间采集数据并保存到infxluxdb中。通过grafana配置为动态图表，可实时查看采集数据的动态图。采集服务已内置到hydra中,提供的采集服务如下：
+
+|名称|服务名|args参数
+|----|-----|----|
+|CPU使用率|/alarm/collect/cpu/used|influxdb:数据库配置|
+|内存使用率|/alarm/collect/mem/used|influxdb:数据库配置|
+|硬盘使用率|/alarm/collect/disk/used|influxdb:数据库配置|
+|网络连接数|/alarm/collect/net/conn|influxdb:数据库配置|
+|网络收发数|/alarm/collect/net/status|influxdb:数据库配置|
+|HTTP状态|/alarm/collect/http/status|url:http请求地址,influxdb:数据库配置|
+|TCP状态|/alarm/collect/tcp/status|host:tcp服务器地址,influxdb:数据库配置|
+|注册服务个数|/alarm/collect/registry/count|path:注册中心地址,influxdb:数据库配置|
+|数据库服务状态|/alarm/collect/sql/query|sql:数据库查询语句,返回一个数字；db:数据库连接串,influxdb:数据库配置|
+|nginx错误数|/alarm/collect/api/server/response|influxdb:数据库配置|
+|nginx每秒请求数|/alarm/collect/api/server/response|influxdb:数据库配置|
+|api服务器响应|/alarm/collect/api/server/response|influxdb:数据库配置|
+|web服务器响应|/alarm/collect/web/server/response|influxdb:数据库配置|
+|rpc服务器响应|/alarm/collect/rpc/server/response|influxdb:数据库配置|
+|mq consumer响应|/alarm/collect/mq/consumer/responset|influxdb:数据库配置|
+|cron服务器响应|/alarm/collect/cron/server/response|influxdb:数据库配置|
+
+|api每秒请求数|/alarm/collect/api/server/qps|influxdb:数据库配置|
+|web每秒请求数|/alarm/collect/web/server/qps|influxdb:数据库配置|
+|rpc每秒请求数|/alarm/collect/rpc/server/qps|influxdb:数据库配置|
+|mq consumer每秒请求数|/alarm/collect/mq/consumer/qps|influxdb:数据库配置|
+|cron每秒请求数|/alarm/collect/cron/server/qps|influxdb:数据库配置|
+
+
+
+ 引擎名称: `alarm` 
+ 
+ 将以上服务配置为cron服务， hydra将定时采集数据，并存储到influxdb中
