修改报警文档

--- a/quickstart/alarm/1.alarm.md
+++ b/quickstart/alarm/1.alarm.md
@@ -46,16 +46,16 @@ hydra内置引擎支持以下监控与报警
 
 |名称|服务名|args参数
 |----|-----|----|
-|CPU使用率|/alarm/collect/cpu/used|influxdb:数据库配置,max:CPU最高使用比例0-100|
-|内存使用率|/alarm/collect/mem/used|influxdb:数据库配置,max:内存最高使用比例0-100|
-|硬盘使用率|/alarm/collect/disk/used|influxdb:数据库配置,max:硬盘最高使用比例0-100|
-|网络连接数|/alarm/collect/net/conn|influxdb:数据库配置,max:最大个数|
+|CPU使用率|/alarm/collect/cpu/used|max:CPU最高使用比例0-100，influxdb:数据库配置|
+|内存使用率|/alarm/collect/mem/used|max:内存最高使用比例0-100，influxdb:数据库配置|
+|硬盘使用率|/alarm/collect/disk/used|max:硬盘最高使用比例0-100，influxdb:数据库配置|
+|网络连接数|/alarm/collect/net/conn|max:最大个数，influxdb:数据库配置|
 |HTTP状态|/alarm/collect/http/status|url:http请求地址,influxdb:数据库配置|
 |TCP状态|/alarm/collect/tcp/status|host:tcp服务器地址,influxdb:数据库配置|
 |注册服务个数|/alarm/collect/registry/count|path:注册中心地址,influxdb:数据库配置|
 |数据库服务状态|/alarm/collect/sql/query|sql:数据库查询语句,返回一个数字；db:数据库连接串,influxdb:数据库配置|
-|nginx错误数|/alarm/collect/api/server/response|influxdb:数据库配置,max:最大个数|
-|nginx每秒请求数|/alarm/collect/api/server/response|influxdb:数据库配置,max:最大个数|
+|nginx错误数|/alarm/collect/api/server/response|max:最大个数，influxdb:数据库配置|
+|nginx每秒请求数|/alarm/collect/api/server/response|max:最大个数，influxdb:数据库配置|
 |api服务器响应|/alarm/collect/api/server/response|influxdb:数据库配置|
 |web服务器响应|/alarm/collect/web/server/response|influxdb:数据库配置|
 |rpc服务器响应|/alarm/collect/rpc/server/response|influxdb:数据库配置|
