--- a/quickstart/alarm/1.alarm.md
+++ b/quickstart/alarm/1.alarm.md
@@ -61,7 +61,6 @@ hydra内置引擎支持以下监控与报警
 |rpc服务器响应|/alarm/collect/rpc/server/response|influxdb:数据库配置|
 |mq consumer响应|/alarm/collect/mq/consumer/responset|influxdb:数据库配置|
 |cron服务器响应|/alarm/collect/cron/server/response|influxdb:数据库配置|
-
 |api每秒请求数|/alarm/collect/api/server/qps|influxdb:数据库配置|
 |web每秒请求数|/alarm/collect/web/server/qps|influxdb:数据库配置|
 |rpc每秒请求数|/alarm/collect/rpc/server/qps|influxdb:数据库配置|
@@ -69,7 +68,6 @@ hydra内置引擎支持以下监控与报警
 |cron每秒请求数|/alarm/collect/cron/server/qps|influxdb:数据库配置|
 
 
-
  引擎名称: `alarm` 
  
- 将以上服务配置为cron服务， hydra将定时采集数据，并存储到influxdb中
+ 将以上服务配置为cron服务， hydra将定时采集数据并生成报警和恢复数据存储到influxdb中
