--- a/quickstart/alarm/1.alarm.md
+++ b/quickstart/alarm/1.alarm.md
@@ -52,10 +52,10 @@ hydra内置引擎支持以下监控与报警
 |网络连接数|/alarm/collect/net/conn|max:最多连接数，influxdb:数据库配置|
 |HTTP状态|/alarm/collect/http/status|url:http请求地址,influxdb:数据库配置|
 |TCP状态|/alarm/collect/tcp/status|host:tcp服务器地址,influxdb:数据库配置|
-|注册服务个数|/alarm/collect/registry/count|path:注册中心地址,influxdb:数据库配置|
-|数据库服务状态|/alarm/collect/sql/query|sql:数据库查询语句,返回一个数字；db:数据库连接串,influxdb:数据库配置|
-|nginx错误数|/alarm/collect/api/server/response|max:最多错误数，influxdb:数据库配置|
-|nginx每秒请求数|/alarm/collect/api/server/response|max:每秒最多请求数，influxdb:数据库配置|
+|注册服务个数|/alarm/collect/registry/count|path:注册中心地址,min:最少服务数，influxdb:数据库配置|
+|数据库服务状态|/alarm/collect/sql/query|sql:数据库查询语句,返回一个数字；max:最多个数,min:最小个数，db:数据库连接串,influxdb:数据库配置|
+|nginx错误数/alarm/collect/nginx/error|max:最多错误数，influxdb:数据库配置|
+|nginx每秒请求数|/alarm/collect/nginx/qps|max:每秒最多请求数，influxdb:数据库配置|
 |api服务器响应|/alarm/collect/api/server/response|influxdb:数据库配置|
 |web服务器响应|/alarm/collect/web/server/response|influxdb:数据库配置|
 |rpc服务器响应|/alarm/collect/rpc/server/response|influxdb:数据库配置|
