修改报警文档

--- a/quickstart/alarm/1.alarm.md
+++ b/quickstart/alarm/1.alarm.md
@@ -42,7 +42,7 @@ hydra内置引擎支持以下监控与报警
 
 
 ### 2.报警服务
-根据采集服务配置，间隔一定时间采集数据并保存到infxluxdb中。通过grafana配置为动态图表，可实时查看采集数据的动态图。采集服务已内置到hydra中,提供的采集服务如下：
+根据报警服务配置，间隔一定时间采集数据并检查数据是否正常，并将报警和恢复数据存储到influxdb中，需使用消息发送服务将报警数据推送到手机:
 
 |名称|服务名|args参数
 |----|-----|----|
