修改报警文档

--- a/quickstart/alarm/1.alarm.md
+++ b/quickstart/alarm/1.alarm.md
@@ -66,7 +66,7 @@ hydra内置引擎支持以下监控与报警
 |rpc每秒请求数|/alarm/collect/rpc/server/qps|influxdb:数据库配置|
 |mq consumer每秒请求数|/alarm/collect/mq/consumer/qps|influxdb:数据库配置|
 |cron每秒请求数|/alarm/collect/cron/server/qps|influxdb:数据库配置|
-
+|报警消息推送|/alarm/notify/send|notify_setting：推送信息配置文件，wx_setting:微信消息推送配置文件，time：推送间隔时间默认1m|
 
  引擎名称: `alarm` 
  
