--- a/quickstart/alarm/1.alarm.md
+++ b/quickstart/alarm/1.alarm.md
@@ -56,16 +56,16 @@ hydra内置引擎支持以下监控与报警
 |数据库服务状态|/alarm/collect/sql/query|sql:数据库查询语句,返回一个数字；max:最多个数,min:最小个数，db:数据库连接串,influxdb:数据库配置|
 |nginx错误数|/alarm/collect/nginx/error|max:最多错误数，influxdb:数据库配置|
 |nginx每秒请求数|/alarm/collect/nginx/qps|max:每秒最多请求数，influxdb:数据库配置|
-|api服务器响应|/alarm/collect/api/server/response|domain:统计平台域，code:响应码默认500,max:最多个数,min:最小个数，influxdb:数据库配置|
-|web服务器响应|/alarm/collect/web/server/response|domain:统计平台域，code:响应码默认500,max:最多个数,min:最小个数，influxdb:数据库配置|
-|rpc服务器响应|/alarm/collect/rpc/server/response|domain:统计平台域，code:响应码默认500,max:最多个数,min:最小个数，influxdb:数据库配置|
-|mq consumer响应|/alarm/collect/mq/consumer/responset|domain:统计平台域，code:响应码默认500,max:最多个数,min:最小个数，influxdb:数据库配置|
-|cron服务器响应|/alarm/collect/cron/server/response|domain:统计平台域，code:响应码默认500,max:最多个数,min:最小个数，influxdb:数据库配置|
-|api每秒请求数|/alarm/collect/api/server/qps|domain:统计平台域，max:最多个数,min:最小个数，influxdb:数据库配置|
-|web每秒请求数|/alarm/collect/web/server/qps|domain:统计平台域，max:最多个数,min:最小个数，influxdb:数据库配置|
-|rpc每秒请求数|/alarm/collect/rpc/server/qps|domain:统计平台域，max:最多个数,min:最小个数，influxdb:数据库配置|
-|mq consumer每秒请求数|/alarm/collect/mq/consumer/qps|domain:统计平台域，max:最多个数,min:最小个数，influxdb:数据库配置|
-|cron每秒请求数|/alarm/collect/cron/server/qps|domain:统计平台域，max:最多个数,min:最小个数，influxdb:数据库配置|
+|api服务器响应|/alarm/collect/api/server/response|domain:平台域，code:响应码默认500,max:最多个数,min:最小个数，influxdb:数据库配置|
+|web服务器响应|/alarm/collect/web/server/response|domain:平台域，code:响应码默认500,max:最多个数,min:最小个数，influxdb:数据库配置|
+|rpc服务器响应|/alarm/collect/rpc/server/response|domain:平台域，code:响应码默认500,max:最多个数,min:最小个数，influxdb:数据库配置|
+|mq consumer响应|/alarm/collect/mq/consumer/responset|domain:平台域，code:响应码默认500,max:最多个数,min:最小个数，influxdb:数据库配置|
+|cron服务器响应|/alarm/collect/cron/server/response|domain:平台域，code:响应码默认500,max:最多个数,min:最小个数，influxdb:数据库配置|
+|api每秒请求数|/alarm/collect/api/server/qps|domain:平台域，max:最多个数,min:最小个数，influxdb:数据库配置|
+|web每秒请求数|/alarm/collect/web/server/qps|domain:平台域，max:最多个数,min:最小个数，influxdb:数据库配置|
+|rpc每秒请求数|/alarm/collect/rpc/server/qps|domain:平台域，max:最多个数,min:最小个数，influxdb:数据库配置|
+|mq consumer每秒请求数|/alarm/collect/mq/consumer/qps|domain:平台域，max:最多个数,min:最小个数，influxdb:数据库配置|
+|cron每秒请求数|/alarm/collect/cron/server/qps|domain:平台域，max:最多个数,min:最小个数，influxdb:数据库配置|
 |报警消息推送|/alarm/notify/send|notify_setting：推送配置文件，wx_setting:微信推送配置文件，time：推送间隔时间默认1m|
 
  引擎名称: `alarm` 
