增加自动更新和版本号

--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -64,7 +64,7 @@
         "cert":"../www.baidu.com.crt",
         "key":"../baidu2017098773.key"
     },
-    "metric":"@domain/var/influxdb/metric"
+    "metric":"/@domain/var/influxdb/metric"
 }
 ```
 
