重构服务引擎

--- a/quickstart/4.install_zk.md
+++ b/quickstart/4.install_zk.md
@@ -31,5 +31,5 @@ hydra服务器启动参数，运行参数都是通过zookeeper来管理的。我
 
 1. 使用themis图形界面管理，[查看](https://github.com/qxnw/hydra/blob/master/quickstart/5.install_themis.md)
 
-2. 使用zooInspector手动编辑，需要用户编写json数据，配置难度较高，不推荐 [下载](https://issues.apache.org/jira/secure/attachment/12436620/ZooInspector.zip) 
+2. 使用zooInspector手动编辑[查看](http://download.csdn.net/download/nihaoadam/9427620)，需要用户编写json数据，配置难度较高，不推荐 [下载](https://issues.apache.org/jira/secure/attachment/12436620/ZooInspector.zip) 
 [帮助](http://blog.csdn.net/liubowin/article/details/77966868?locationNum=6&fps=1)
